--- a/Test_SASA.ipynb
+++ b/Test_SASA.ipynb
@@ -248,7 +248,7 @@
    ],
    "source": [
     "## Running the gromacs commands\n",
-    "run_SASA('CG', CG, 'sele, main_dir) #Do it for chain A of the protein. If done for everything, gromacs only takes the unique residues and provide an average across"
+    "run_SASA('CG', CG, sele, main_dir) #Do it for chain A of the protein. If done for everything, gromacs only takes the unique residues and provide an average across"
    ]
   },
   {
