SASA resolution scaling

--- a/MDAnalysis_example.ipynb
+++ b/MDAnalysis_example.ipynb
@@ -55,18 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "d37e5e9c-2688-4b30-9f17-44637e11f5b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Relative long simulation, can take time to load in\n",
-    "ucg = md.Universe('../LSB_data/SPC_L11_CG_2.tpr', '../LSB_data/SPC_L11_CG_1_whole_skip100.xtc')\n"
+    "ucg = md.Universe('../LSB_data/SPC_L11_CG_2.tpr', '../LSB_data/SPC_L11_CG_1_whole_skip100.xtc')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "dc179f28",
    "metadata": {},
    "outputs": [
@@ -75,52 +76,46 @@
      "output_type": "stream",
      "text": [
       "Generating vdw_map from trajectory...\n",
-      "Computing SASA w/ a 1.91A radius probe over a total of 10001 snapshots of 425 particules each \n"
+      "HighResolution:: Computing SASA w/ a 1.91A radius probe over a total of 10001 snapshots of 425 particles each \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10100it [02:36, 64.73it/s]                                                                                                                    \n"
+      "  0%|                                                              | 0/10001 [00:14<?, ?it/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Compiling results over 0 snapshots\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "10001it [02:01, 82.04it/s]\n"
+     "ename": "AttributeError",
+     "evalue": "module 'ccmap' has no attribute 'sasa_multi_mda_np_arrays'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m sasa_res \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_multi_sasa_from_frame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mucg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m\\\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m           \u001b[49m\u001b[43mchunk_sz\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mselector\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msegid seg_0_A\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprobe\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1.91\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhres\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/work/projects/ccmap/pcmap_sasa_integration/pcmap_DARWIN/pcmap/sasa/__init__.py:11\u001b[0m, in \u001b[0;36mcompute_multi_sasa_from_frame\u001b[0;34m(frame, npos, step, selector, chunk_sz, probe, ncpu, hres)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute_multi_sasa_from_frame\u001b[39m(frame:Universe, npos\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, step\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, selector\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mall\u001b[39m\u001b[38;5;124m\"\u001b[39m, chunk_sz\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, probe\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.4\u001b[39m, ncpu\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m, hres\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m---> 11\u001b[0m     _ \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_sasa_frame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnpos\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchunk_sz\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprobe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mncpu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mselector\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mselector\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstep\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhres\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mhres\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m     res \u001b[38;5;241m=\u001b[39m SASA_Results()\n\u001b[1;32m     13\u001b[0m     res\u001b[38;5;241m.\u001b[39mparse(_)\n",
+      "File \u001b[0;32m~/work/projects/ccmap/pcmap_sasa_integration/pcmap_DARWIN/pcmap/sasa/generator.py:107\u001b[0m, in \u001b[0;36mrun_with_pbar\u001b[0;34m(mda_universe, max_frame, chunk_size, probe_radius, ncpu, step, hres, **kwargs)\u001b[0m\n\u001b[1;32m    103\u001b[0m results \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m future \u001b[38;5;129;01min\u001b[39;00m as_completed(futures):\n\u001b[1;32m    105\u001b[0m     \u001b[38;5;66;03m#arg = futures[future]\u001b[39;00m\n\u001b[1;32m    106\u001b[0m     \u001b[38;5;66;03m# future seems to reduce to hash -> a number ?\u001b[39;00m\n\u001b[0;32m--> 107\u001b[0m     results\u001b[38;5;241m.\u001b[39mappend( \u001b[43mfuture\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m )\n\u001b[1;32m    108\u001b[0m     pbar\u001b[38;5;241m.\u001b[39mupdate(chunk_size)\n\u001b[1;32m    109\u001b[0m pbar\u001b[38;5;241m.\u001b[39mclose()\n",
+      "File \u001b[0;32m~/opt/miniconda3/lib/python3.9/concurrent/futures/_base.py:438\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    436\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CancelledError()\n\u001b[1;32m    437\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;241m==\u001b[39m FINISHED:\n\u001b[0;32m--> 438\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__get_result\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    440\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_condition\u001b[38;5;241m.\u001b[39mwait(timeout)\n\u001b[1;32m    442\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;129;01min\u001b[39;00m [CANCELLED, CANCELLED_AND_NOTIFIED]:\n",
+      "File \u001b[0;32m~/opt/miniconda3/lib/python3.9/concurrent/futures/_base.py:390\u001b[0m, in \u001b[0;36mFuture.__get_result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    388\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception:\n\u001b[1;32m    389\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 390\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception\n\u001b[1;32m    391\u001b[0m     \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    392\u001b[0m         \u001b[38;5;66;03m# Break a reference cycle with the exception in self._exception\u001b[39;00m\n\u001b[1;32m    393\u001b[0m         \u001b[38;5;28mself\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/opt/miniconda3/lib/python3.9/concurrent/futures/thread.py:52\u001b[0m, in \u001b[0;36m_WorkItem.run\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 52\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mBaseException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfuture\u001b[38;5;241m.\u001b[39mset_exception(exc)\n",
+      "File \u001b[0;32m~/work/projects/ccmap/pcmap_sasa_integration/pcmap_DARWIN/pcmap/sasa/generator.py:61\u001b[0m, in \u001b[0;36msasa_frame_task\u001b[0;34m(*_args)\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msasa_frame_task\u001b[39m(\u001b[38;5;241m*\u001b[39m_args):\n\u001b[1;32m     60\u001b[0m     args\u001b[38;5;241m=\u001b[39m_args[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m---> 61\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43mccmap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msasa_multi_mda_np_arrays\u001b[49m(\u001b[38;5;241m*\u001b[39margs[:\u001b[38;5;241m5\u001b[39m], rtype\u001b[38;5;241m=\u001b[39margs[\u001b[38;5;241m5\u001b[39m], probe\u001b[38;5;241m=\u001b[39margs[\u001b[38;5;241m6\u001b[39m], hres\u001b[38;5;241m=\u001b[39margs[\u001b[38;5;241m7\u001b[39m])\n\u001b[1;32m     63\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m data\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'ccmap' has no attribute 'sasa_multi_mda_np_arrays'"
      ]
     }
    ],
    "source": [
     "sasa_res = compute_multi_sasa_from_frame(ucg,\\\n",
-    "           chunk_sz=100, selector=\"segid seg_0_A\", probe=1.91) # buggy display over all frames, let's try w/ redudec count\n",
+    "           chunk_sz=100, selector=\"segid seg_0_A\", probe=1.91, hres=True)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f71699f9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10001 179\n",
-      "1790179\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(sasa_res.nframe, sasa_res.nresidue)\n",
     "print(len(sasa_res.sasa))\n",
@@ -130,90 +125,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4422420b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(('MET', '1', 'seg_0_A'), 199.50884176719046, 32.19732416312361),\n",
-       " (('LEU', '2', 'seg_0_A'), 96.64482562669026, 22.103394730022536),\n",
-       " (('SER', '3', 'seg_0_A'), 73.60822419650125, 9.833547484916833),\n",
-       " (('LEU', '4', 'seg_0_A'), 107.51350806386647, 9.257823105130694),\n",
-       " (('ASP', '5', 'seg_0_A'), 58.093434226523634, 22.188163538947418),\n",
-       " (('PHE', '6', 'seg_0_A'), 112.38561162194327, 34.700454821883234),\n",
-       " (('LEU', '7', 'seg_0_A'), 86.57584562893808, 8.303407542226834),\n",
-       " (('ASP', '8', 'seg_0_A'), 67.18626896465626, 9.22480982359553),\n",
-       " (('ASP', '9', 'seg_0_A'), 23.85133524611406, 13.043187991580757),\n",
-       " (('VAL', '10', 'seg_0_A'), 59.534486471396804, 10.966410261189353),\n",
-       " (('ARG', '11', 'seg_0_A'), 206.38603285972673, 13.862049530280323),\n",
-       " (('ARG', '12', 'seg_0_A'), 138.81776121093947, 14.9715818108505),\n",
-       " (('MET', '13', 'seg_0_A'), 54.07863510829093, 17.064579635286375),\n",
-       " (('ASN', '14', 'seg_0_A'), 84.82637256293901, 14.501828360564895),\n",
-       " (('LYS', '15', 'seg_0_A'), 163.2827887682423, 14.18759462877491),\n",
-       " (('ARG', '16', 'seg_0_A'), 159.3562641965784, 18.13836494889894),\n",
-       " (('GLN', '17', 'seg_0_A'), 47.675610264901245, 23.909222828340937),\n",
-       " (('LEU', '18', 'seg_0_A'), 52.41016505954385, 9.997744437499575),\n",
-       " (('TYR', '19', 'seg_0_A'), 119.5347099506358, 19.792286473798082),\n",
-       " (('TYR', '20', 'seg_0_A'), 113.14269994509338, 23.788421755603064),\n",
-       " (('GLN', '21', 'seg_0_A'), 24.96243598906711, 11.0565477338774),\n",
-       " (('VAL', '22', 'seg_0_A'), 74.35356409732562, 8.71953755395263),\n",
-       " (('LEU', '23', 'seg_0_A'), 85.15760542781172, 11.675465250105011),\n",
-       " (('ASN', '24', 'seg_0_A'), 61.27144485868796, 24.839606481643152),\n",
-       " (('PHE', '25', 'seg_0_A'), 102.13219420855766, 23.527309129810327)]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "stats[:25]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c919d99b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(('LEU', '155', 'seg_0_A'), 56.93792168024409, 11.169732214162222),\n",
-       " (('MET', '156', 'seg_0_A'), 62.35412525641967, 13.584524261396492),\n",
-       " (('ASN', '157', 'seg_0_A'), 98.48964898737177, 21.450061528479598),\n",
-       " (('ASP', '158', 'seg_0_A'), 84.73746713158275, 18.835545230279855),\n",
-       " (('TYR', '159', 'seg_0_A'), 146.4818952614016, 23.64892903672149),\n",
-       " (('PRO', '160', 'seg_0_A'), 59.225602717438214, 10.421173511588583),\n",
-       " (('LYS', '161', 'seg_0_A'), 140.22129667831555, 16.646836568658383),\n",
-       " (('PHE', '162', 'seg_0_A'), 90.0784068809916, 13.908298352374919),\n",
-       " (('LYS', '163', 'seg_0_A'), 80.63018400918698, 12.549848665977875),\n",
-       " (('TYR', '164', 'seg_0_A'), 157.66269979447367, 14.387749011395115),\n",
-       " (('ALA', '165', 'seg_0_A'), 52.22151373119524, 6.903688838168883),\n",
-       " (('VAL', '166', 'seg_0_A'), 32.862152175895694, 9.116108904359738),\n",
-       " (('LEU', '167', 'seg_0_A'), 93.4351786714639, 16.945843876327064),\n",
-       " (('PHE', '168', 'seg_0_A'), 161.82082840910246, 14.627542606664512),\n",
-       " (('LEU', '169', 'seg_0_A'), 95.39557964979869, 9.103497924113721),\n",
-       " (('LEU', '170', 'seg_0_A'), 89.7036186701154, 15.351382252599644),\n",
-       " (('GLY', '171', 'seg_0_A'), 23.52148285995375, 12.842901248515215),\n",
-       " (('LEU', '172', 'seg_0_A'), 68.22721887357163, 12.488387576219987),\n",
-       " (('PHE', '173', 'seg_0_A'), 144.9880804705174, 21.438734295492242),\n",
-       " (('VAL', '174', 'seg_0_A'), 28.219625184088038, 12.939310495421816),\n",
-       " (('LEU', '175', 'seg_0_A'), 86.43793254951848, 33.890754991824394),\n",
-       " (('VAL', '176', 'seg_0_A'), 45.142667584437845, 24.539550175506836),\n",
-       " (('HIS', '177', 'seg_0_A'), 97.17437792353577, 46.93705341026251),\n",
-       " (('ARG', '178', 'seg_0_A'), 43.189943792485984, 20.697787598820838),\n",
-       " (('GLU', '179', 'seg_0_A'), 202.11874585551698, 20.097140407453075)]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "stats[-25:]"
    ]
